src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedThumbnail/InvalidUnexpectedThumbnail.php
<?php

namespace Invalid\UnexpectedThumbnail;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedThumbnail extends PluginBundle
{
}